--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         body { 
-            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; 
+            font-family: 'Segoe UI', Tahoma, Arial, sans-serif; 
             background: var(--bg); 
             margin: 0; 
             direction: rtl; 
@@ -33,43 +33,47 @@
             align-items: center; 
             box-shadow: 0 4px 15px rgba(0,0,0,0.15); 
             border-bottom: 4px solid var(--accent);
-            flex-wrap: wrap;
         }
 
-        .header-title h1 { margin: 0; font-size: clamp(1.2rem, 4vw, 1.8rem); font-weight: 800; }
-        .header-title p { margin: 2px 0 0; font-size: 0.95rem; color: #f1c40f; }
+        .header-title h1 { margin: 0; font-size: 1.6rem; font-weight: 800; }
+        .header-title p { margin: 2px 0 0; font-size: 0.9rem; color: #f1c40f; font-weight: 600; }
 
-        .container { max-width: 1200px; margin: 30px auto; padding: 0 20px; }
+        .container { max-width: 1100px; margin: 30px auto; padding: 0 20px; }
         .card { background: white; padding: 30px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.05); }
 
-        .page-title { text-align: center; color: var(--primary); margin-bottom: 30px; font-size: 1.4rem; position: relative; padding-bottom: 10px; }
-        .page-title::after { content: ''; position: absolute; bottom: 0; left: 50%; transform: translateX(-50%); width: 80px; height: 3px; background: var(--secondary); }
+        .page-title { text-align: center; color: var(--primary); margin-bottom: 30px; font-size: 1.5rem; position: relative; padding-bottom: 10px; font-weight: 800; }
+        .page-title::after { content: ''; position: absolute; bottom: 0; left: 50%; transform: translateX(-50%); width: 100px; height: 4px; background: var(--secondary); border-radius: 2px; }
 
-        .form-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; }
+        /* تنسيق شبكة البيانات */
+        .form-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; }
         .full-row { grid-column: 1 / -1; }
 
         .input-group { display: flex; flex-direction: column; }
-        .input-group label { margin-bottom: 8px; font-weight: 700; color: #444; font-size: 0.9rem; }
-        .input-group input, .input-group select { padding: 12px 15px; border: 2px solid #e0e6ed; border-radius: 12px; font-size: 1rem; transition: 0.3s; }
+        .input-group label { margin-bottom: 8px; font-weight: 700; color: #333; font-size: 0.95rem; }
+        .input-group input, .input-group select { padding: 12px 15px; border: 2px solid #e0e6ed; border-radius: 12px; font-size: 1rem; outline: none; transition: 0.3s; }
+        .input-group input:focus { border-color: var(--primary); box-shadow: 0 0 10px rgba(26,82,118,0.1); }
 
-        #submitBtn { width: 100%; background: var(--secondary); color: white; padding: 16px; border: none; border-radius: 12px; font-size: 1.1rem; font-weight: 800; margin-top: 25px; cursor: pointer; box-shadow: 0 5px 15px rgba(39, 174, 96, 0.2); }
+        #submitBtn { width: 100%; background: var(--secondary); color: white; padding: 18px; border: none; border-radius: 12px; font-size: 1.2rem; font-weight: 800; margin-top: 25px; cursor: pointer; transition: 0.3s; box-shadow: 0 5px 15px rgba(39, 174, 96, 0.3); }
+        #submitBtn:hover { transform: translateY(-3px); box-shadow: 0 8px 20px rgba(39, 174, 96, 0.4); }
 
-        .admin-content { display: none; background: white; padding: 25px; border-radius: 20px; width: 98%; margin: 20px auto; box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
+        /* صفحة المسؤول المحدثة */
+        .admin-content { display: none; background: white; padding: 25px; border-radius: 20px; width: 98%; margin: 20px auto; box-shadow: 0 10px 40px rgba(0,0,0,0.1); }
+        
+        .table-res { width: 100%; overflow-x: auto; margin-top: 20px; border-radius: 15px; border: 1px solid #eee; }
+        .data-table { width: 100%; border-collapse: collapse; min-width: 1200px; }
+        .data-table th { background: var(--primary); color: white; padding: 15px; text-align: right; font-size: 0.9rem; position: sticky; top: 0; }
+        .data-table td { padding: 12px 15px; border-bottom: 1px solid #f0f0f0; font-size: 0.9rem; vertical-align: middle; white-space: nowrap; }
+        .data-table tr:hover { background: #f8fbff; }
 
-        /* تنسيق الجدول الاحترافي */
-        .table-res { overflow-x: auto; margin-top: 20px; }
-        .data-table { width: 100%; border-collapse: collapse; min-width: 1100px; }
-        .data-table th { background: var(--primary); color: white; padding: 15px; text-align: right; font-size: 0.85rem; }
-        .data-table td { padding: 12px 15px; border-bottom: 1px solid #eee; font-size: 0.85rem; vertical-align: middle; }
-        .data-table tr:hover { background: #f8f9fa; }
+        .status-badge { padding: 5px 12px; border-radius: 20px; font-weight: bold; font-size: 0.8rem; display: inline-block; }
+        .badge-wait { background: #fff4e5; color: #b7791f; border: 1px solid #fbd38d; }
+        .badge-done { background: #f0fff4; color: #276749; border: 1px solid #9ae6b4; }
 
-        .status-badge { padding: 4px 10px; border-radius: 20px; font-weight: bold; font-size: 0.75rem; }
-        .badge-wait { background: #fff3cd; color: #856404; }
-        .badge-done { background: #d4edda; color: #155724; }
+        .engineer-footer { background: #1c2833; color: #d5dbdb; text-align: center; padding: 15px; position: fixed; bottom: 0; width: 100%; font-size: 0.85rem; border-top: 3px solid var(--accent); z-index: 1000; }
+        .engineer-footer b { color: #f1c40f; }
 
-        .engineer-footer { background: #1c2833; color: #d5dbdb; text-align: center; padding: 12px; position: fixed; bottom: 0; width: 100%; font-size: 0.85rem; border-top: 3px solid var(--accent); }
-        .modal { display: none; position: fixed; z-index: 10000; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); text-align: center; }
-        .modal-main-img { max-width: 90%; max-height: 75vh; margin-top: 30px; border-radius: 15px; border: 4px solid #fff; }
+        .modal { display: none; position: fixed; z-index: 10001; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); text-align: center; }
+        .modal-main-img { max-width: 85%; max-height: 70vh; margin-top: 40px; border-radius: 15px; border: 5px solid #fff; }
     </style>
 </head>
 <body>
@@ -77,22 +81,22 @@
 <header>
     <div class="header-title">
         <h1>رئاسة مركز ومدينة كفر صقر</h1>
-        <p>مع تحياتي رئيس مجلس المدينة د/ أحمد المقدم</p>
+        <p>تحت إشراف السيد الدكتور/ أحمد المقدم</p>
     </div>
-    <button id="loginBtn" style="background:rgba(255,255,255,0.15); color:white; padding:8px 16px; border:1px solid white; border-radius:8px; cursor:pointer; font-weight:600;">🔐 لوحة التحكم</button>
+    <button id="loginBtn" style="background:rgba(255,255,255,0.2); color:white; padding:10px 20px; border:1px solid white; border-radius:10px; cursor:pointer; font-weight:bold;">🔐 لوحة التحكم</button>
 </header>
 
 <div class="container" id="citizenPage">
     <div class="card">
-        <h2 class="page-title">تسجيل بيانات المركبة</h2>
+        <h2 class="page-title">منظومة تكويد وتراخيص المركبات</h2>
         <div class="form-grid">
             <div class="input-group full-row">
-                <label>الاسم الرباعي للمالك</label>
-                <input type="text" id="ownerName" placeholder="كما هو مدون في بطاقة الرقم القومي">
+                <label>الاسم الرباعي للمالك (من واقع البطاقة)</label>
+                <input type="text" id="ownerName" placeholder="أدخل اسمك كاملاً">
             </div>
             <div class="input-group">
                 <label>الرقم القومي (14 رقم)</label>
-                <input type="number" id="nationalId">
+                <input type="number" id="nationalId" placeholder="29xxxxxxxxxxxx">
             </div>
             <div class="input-group">
                 <label>رقم الهاتف المحمول</label>
@@ -108,38 +112,46 @@
             </div>
             <div class="input-group">
                 <label>الموديل / اللون</label>
-                <input type="text" id="vDesc" placeholder="مثال: بجاج 2024 - أحمر">
+                <input type="text" id="vDesc" placeholder="مثال: دايون 2025 - أسود">
             </div>
             <div class="input-group full-row">
-                <label>العنوان السكني الحالي</label>
-                <input type="text" id="address" placeholder="المدينة / القرية / الشارع">
+                <label>العنوان السكني التفصيلي</label>
+                <input type="text" id="address" placeholder="القرية / الحي / الشارع">
             </div>
             <div class="input-group full-row">
-                <label>صور المركبة والمستندات</label>
-                <input type="file" id="multiFiles" accept="image/*" multiple style="border: 2px dashed #ccc; padding: 20px; background: #f9f9f9; text-align: center;">
+                <label>صور المركبة والمستندات (يمكن اختيار أكثر من صورة)</label>
+                <input type="file" id="multiFiles" accept="image/*" multiple style="border: 2px dashed #3498db; padding: 25px; background: #f0f7ff; border-radius: 15px; text-align: center; cursor: pointer;">
             </div>
         </div>
-        <button id="submitBtn">تأكيد البيانات وحفظ الطلب ✅</button>
+        <button id="submitBtn">تأكيد البيانات وإرسال الطلب ✅</button>
     </div>
 </div>
 
 <div id="adminPage" class="admin-content">
-    <div style="display:flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
-        <h2 style="margin:0; color:var(--primary);">مراجعة الطلبات</h2>
-        <div style="display:flex; gap:10px;">
-            <button id="exportExcelBtn" style="background:#27ae60; color:white; border:none; padding:10px 20px; border-radius:10px; cursor:pointer; font-weight:bold;">تصدير Excel</button>
-            <button onclick="location.reload()" style="background:#c0392b; color:white; border:none; padding:10px 15px; border-radius:8px; cursor:pointer;">خروج</button>
+    <div style="display:flex; justify-content: space-between; align-items: center; margin-bottom: 25px;">
+        <h2 style="margin:0; color:var(--primary);">لوحة مراجعة البيانات</h2>
+        <div style="display:flex; gap:12px;">
+            <button id="exportExcelBtn" style="background:#27ae60; color:white; border:none; padding:10px 25px; border-radius:10px; cursor:pointer; font-weight:bold;">📥 تصدير Excel</button>
+            <button onclick="location.reload()" style="background:#e74c3c; color:white; border:none; padding:10px 20px; border-radius:10px; cursor:pointer; font-weight:bold;">خروج</button>
         </div>
     </div>
     <div class="input-group full-row">
-        <input type="text" id="searchInput" style="padding:15px; border:2px solid var(--primary); border-radius:12px; margin-bottom:15px;" placeholder="ابحث باسم المالك أو الرقم القومي...">
+        <input type="text" id="searchInput" style="padding:15px; border:2px solid var(--primary); border-radius:15px; margin-bottom:20px; font-size:1.1rem;" placeholder="🔍 ابحث بالاسم، الرقم القومي، أو رقم الهاتف...">
     </div>
     <div class="table-res">
         <table class="data-table" id="excelTable">
             <thead>
                 <tr>
-                    <th>وقت التقديم</th><th>المالك</th><th>القومي</th><th>الهاتف</th>
-                    <th>النوع</th><th>الموديل</th><th>العنوان</th><th>الكود</th><th>الصور</th><th>الإجراء</th>
+                    <th>توقيت الطلب</th>
+                    <th>اسم المالك</th>
+                    <th>الرقم القومي</th>
+                    <th>الهاتف</th>
+                    <th>النوع</th>
+                    <th>الموديل/اللون</th>
+                    <th>العنوان</th>
+                    <th>الحالة/الكود</th>
+                    <th>الصور</th>
+                    <th>التحكم</th>
                 </tr>
             </thead>
             <tbody id="dataTable"></tbody>
@@ -148,13 +160,13 @@
 </div>
 
 <div id="imgModal" class="modal">
-    <span style="position: absolute; top: 20px; right: 30px; color: white; font-size: 40px; cursor: pointer;" onclick="document.getElementById('imgModal').style.display='none'">&times;</span>
+    <span style="position: absolute; top: 20px; right: 40px; color: white; font-size: 50px; cursor: pointer; font-weight: bold;" onclick="document.getElementById('imgModal').style.display='none'">&times;</span>
     <img id="mainViewImg" class="modal-main-img">
-    <div id="modalThumbnails" style="display: flex; justify-content: center; gap: 10px; padding: 15px; overflow-x: auto;"></div>
+    <div id="modalThumbnails" style="display: flex; justify-content: center; gap: 12px; padding: 20px; overflow-x: auto;"></div>
 </div>
 
 <footer class="engineer-footer">
-    تم التطوير بواسطة <b>المهندس مهند إيهاب التهامي</b> - خبير تطوير الأنظمة الأمنية المتقدمة
+    تم التطوير بواسطة <b>المهندس مهند إيهاب التهامي</b> - خبير تطوير الأنظمة الأمنية والمتقدمة 🛡️
 </footer>
 
 <script type="module">
@@ -207,29 +219,31 @@
         const nid = document.getElementById('nationalId').value.trim();
         const tel = document.getElementById('phone').value.trim();
 
-        if (nid.length !== 14 || !owner || files.length === 0) return alert("اكمل البيانات");
+        if (nid.length !== 14 || !owner || files.length === 0) { alert("يرجى إكمال جميع البيانات ورفع الصور"); return; }
 
-        btn.disabled = true; btn.innerText = "جاري الحفظ...";
+        btn.disabled = true; btn.innerText = "جاري الحفظ والرفع...";
         const imgs = [];
         for(let f of files) imgs.push(await compressImg(f));
 
-        await addDoc(dbRef, {
-            owner, nationalId: nid, phone: tel,
-            address: document.getElementById('address').value,
-            vType: document.getElementById('vType').value,
-            vDesc: document.getElementById('vDesc').value,
-            images: imgs, timestamp: Date.now(), vCode: ""
-        });
-        alert("تم تسجيل طلبك بنجاح ✅");
-        window.open(`https://wa.me/201021102607?text=*طلب تكويد*%0Aالاسم: ${owner}`, '_blank');
-        location.reload();
+        try {
+            await addDoc(dbRef, {
+                owner, nationalId: nid, phone: tel,
+                address: document.getElementById('address').value,
+                vType: document.getElementById('vType').value,
+                vDesc: document.getElementById('vDesc').value,
+                images: imgs, timestamp: Date.now(), vCode: ""
+            });
+            alert("تم تسجيل طلبك بنجاح ✅");
+            window.open(`https://wa.me/201021102607?text=*طلب تكويد مركبة*%0Aالاسم: ${owner}%0Aالرقم القومي: ${nid}`, '_blank');
+            location.reload();
+        } catch (e) { alert("حدث خطأ في الاتصال!"); btn.disabled = false; }
     };
 
     document.getElementById('loginBtn').onclick = () => {
-        const u = prompt("User:"); const p = prompt("Pass:");
+        const u = prompt("اسم المستخدم:"); const p = prompt("كلمة السر:");
         if (u === "Eltohamy" && p === "551855125500") userRole = "SUPER";
         else if (u === "Bahe" && p === "55185512") userRole = "EDITOR";
-        else return alert("خطأ!");
+        else return alert("بيانات الدخول خاطئة!");
         
         document.getElementById('citizenPage').style.display = 'none';
         document.getElementById('adminPage').style.display = 'block';
@@ -249,18 +263,18 @@
         data.forEach(item => {
             const tr = document.createElement('tr');
             tr.innerHTML = `
-                <td style="color:#777; font-size:11px">${formatDT(item.timestamp)}</td>
+                <td style="color:#666; font-size:0.8rem">${formatDT(item.timestamp)}</td>
                 <td style="font-weight:bold">${item.owner}</td>
-                <td>${item.nationalId}</td>
-                <td><a href="tel:${item.phone}" style="text-decoration:none; color:var(--primary)">${item.phone}</a></td>
+                <td style="font-family:monospace">${item.nationalId}</td>
+                <td><a href="tel:${item.phone}" style="text-decoration:none; color:var(--primary); font-weight:bold;">${item.phone}</a></td>
                 <td>${item.vType}</td>
                 <td>${item.vDesc}</td>
                 <td>${item.address}</td>
-                <td><span class="status-badge ${item.vCode?'badge-done':'badge-wait'}">${item.vCode || '⏳'}</span></td>
-                <td><button style="background:#3498db; color:white; border:none; padding:5px 10px; border-radius:5px; cursor:pointer" onclick="viewImgs('${item.id}')">🖼️</button></td>
+                <td><span class="status-badge ${item.vCode?'badge-done':'badge-wait'}">${item.vCode || '⏳ في الانتظار'}</span></td>
+                <td><button style="background:#3498db; color:white; border:none; padding:6px 12px; border-radius:8px; cursor:pointer" onclick="viewImgs('${item.id}')">🖼️ عرض</button></td>
                 <td>
-                    <button style="background:#f39c12; color:white; border:none; padding:5px 10px; border-radius:5px; cursor:pointer" onclick="setCode('${item.id}')">كود</button>
-                    ${userRole==='SUPER'?'<button style="background:#e74c3c; color:white; border:none; padding:5px 10px; border-radius:5px; cursor:pointer; margin-right:5px" onclick="delItem(\''+item.id+'\')">حذف</button>':''}
+                    <button style="background:#f39c12; color:white; border:none; padding:6px 12px; border-radius:8px; cursor:pointer; font-weight:bold" onclick="setCode('${item.id}')">تكويد</button>
+                    ${userRole==='SUPER'?'<button style="background:#e74c3c; color:white; border:none; padding:6px 12px; border-radius:8px; cursor:pointer; margin-right:5px" onclick="delItem(\''+item.id+'\')">حذف</button>':''}
                 </td>`;
             body.appendChild(tr);
         });
@@ -273,30 +287,37 @@
         const thumbs = document.getElementById("modalThumbnails");
         thumbs.innerHTML = ''; main.src = item.images[0];
         item.images.forEach(src => {
-            const i = document.createElement('img'); i.src = src; i.style.width="60px"; i.style.height="60px"; i.style.cursor="pointer"; i.style.borderRadius="8px";
+            const i = document.createElement('img'); i.src = src; i.style.width="70px"; i.style.height="70px"; i.style.cursor="pointer"; i.style.borderRadius="10px"; i.style.border="2px solid #ddd";
             i.onclick = () => main.src = src; thumbs.appendChild(i);
         });
         modal.style.display = "block";
     };
 
     window.setCode = async (id) => {
-        const c = prompt("أدخل الكود:");
-        if(c) await updateDoc(doc(db, "orders", id), { vCode: c });
+        const c = prompt("أدخل كود المركبة المعتمد:");
+        if(c) {
+            await updateDoc(doc(db, "orders", id), { vCode: c });
+            alert("تم تحديث الكود بنجاح ✅");
+        }
     };
 
     window.delItem = async (id) => {
-        if(confirm("حذف الطلب؟")) await deleteDoc(doc(db, "orders", id));
+        if(confirm("هل أنت متأكد من حذف هذا الطلب نهائياً؟")) await deleteDoc(doc(db, "orders", id));
     };
 
     document.getElementById('searchInput').oninput = (e) => {
         const val = e.target.value.toLowerCase();
-        const filtered = allData.filter(i => i.owner.toLowerCase().includes(val) || i.nationalId.includes(val));
+        const filtered = allData.filter(i => 
+            i.owner.toLowerCase().includes(val) || 
+            i.nationalId.includes(val) || 
+            i.phone.includes(val)
+        );
         renderTable(filtered);
     };
 
     document.getElementById('exportExcelBtn').onclick = () => {
         const wb = XLSX.utils.table_to_book(document.getElementById("excelTable"));
-        XLSX.writeFile(wb, "بيانات_كفر_صقر.xlsx");
+        XLSX.writeFile(wb, "منظومة_كفر_صقر_الرقمية.xlsx");
     };
 </script>
 </body>
